--- a/TU-MS/RESTAURANT-SERVICE/src/main/resources/application.properties
+++ b/TU-MS/RESTAURANT-SERVICE/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.h2.console.path = /h2-console
 server.port = 2016
 
 
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka,http://localhost:8762/eureka
