--- a/TU-MS/USER-SERVICE/src/main/resources/application.properties
+++ b/TU-MS/USER-SERVICE/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.application.name=USER-SERVICE
 
 
 #EUREKA CONFIG
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka,http://localhost:8762/eureka
